<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".main_activity.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.5"
        android:src="@drawable/game_title_logo_white"
        app:layout_constraintBottom_toTopOf="@id/main_menu_play_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/balonik" />

    <Button
        android:id="@+id/main_menu_play_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:textSize="24sp"
        android:text="@string/main_menu_play_button"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/main_menu_exit_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/exit_button"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cloud"
        android:gravity="center"
        android:text="@string/signature"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/main_menu_highscore"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/cloud"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/credits"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_menu_exit_button"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>