<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:src="@drawable/gray_background"
        android:contentDescription="@string/balonik" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/pause_fragment_resume_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:text="@string/resume_button"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:shadowColor="@color/colorBlack"
            android:shadowRadius="2"
            android:shadowDx="2"
            android:shadowDy="2"
            android:padding="10dp"
            android:background="@color/colorDarkBlue"/>

        <Button
            android:id="@+id/pause_fragment_exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBlue"
            android:padding="10dp"
            android:shadowColor="@color/colorBlack"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/exit_button"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
